# anticipation_mcp

./: app.py  pyproject.toml
anticipation/: sample.py
